<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="app_name">My Application</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recyclerview_refresh_item">recycleView相关</string>
    <string name="use_room">room使用</string>
    <string name="snackbar">SnackBar的使用</string>
    <string name="material_design">Material Design的学习</string>
    <string name="use_assets">assets 的使用</string>
    <string name="use_workmanager">WorkManager学习使用</string>
    <string name="kotlin_by">Kotlin-代理属性(by)的学习使用</string>
    <string name="kotlin_t">kotlin 泛型</string>
    <string name="retrofit_okhttp_rxjava">Retrofit+Okhttp+Rxjava网框架的学习</string>
    <string name="data_null">返回数据为空</string>
    <string name="android_q">androidQ适配</string>
    <string name="hint">请输入</string>
    <string name="easypermissions">EasyPermissions的学习和使用</string>
    <string name="request_permission">请求权限</string>
    <string name="kotlin_use">Kotlin 协程的学习使用</string>
    <string name="bottomnaviagationview">BottomNaviagationView与ViewPager2一起使用</string>
    <string name="bottomnaviagationview_fragment">BottomNaviagationView与Fragment一起使用</string>
    <string name="muti_language">多语言</string>
    <string name="muti_languege_setting">多语言（国际化）配置</string>
    <string name="chinese">中文简体</string>
    <string name="english">English</string>
    <string name="finish">完成</string>
    <string name="android_10_0">Android 10.0黑暗模式适配</string>
    <string name="android_10_0_adapter">android 10.0 黑暗模式适配</string>
    <string name="status_bar_adapter">沉浸式状态栏的适配</string>
    <string name="status_bar">沉浸式状态栏</string>
    <string name="status_word_white">自定义状态栏颜色且状态栏文字图标为白色</string>
    <string name="status_word_black">状态栏文字、图标为黑色</string>
    <string name="status_picture">图片沉浸到状态栏下</string>
    <string name="net_status">Android 5.0以下使用广播接受者的方式监听是否有网，Android 5.0及以上使用回调的方式监听是否有网</string>
    <string name="jetpack_navigation_activity">jetpack navigation 实现单activity架构</string>
    <string name="commonfragment">CommonFragment</string>
    <string name="crmfragment">CrmFragment</string>
    <string name="detailfragment">DetailFragment</string>
    <string name="homefragment">HomeFragment</string>
    <string name="oafragment">OaFragment</string>
    <string name="subdetailfragment">SubDetailFragment</string>
    <string name="notificationfragment">NotificationFragment</string>
    <string name="display_cutout">android 9.0刘海屏的适配</string>
    <string name="toolbar">ToolBar的使用</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="banner_use">Banner的使用</string>
    <string name="jetpack_paging">jetpack paging的使用</string>
    <string name="retrofit_okhttp_kotlin">Retrofit + Okhttp +Kotlin协程 框架的学习使用</string>
    <string name="customer">客户</string>
    <string name="sort">排序</string>
    <string name="long_lab">长名称</string>
    <string name="short_lab">短名称</string>

</resources>
